--- a/01_Pairwise.ipynb
+++ b/01_Pairwise.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7a68195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d1527dec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +35,13 @@
     "    ]\n",
     "  return pd.DataFrame(fasta_lists, columns = ['id', 'sequence', 'date', 'pangolin'])\n",
     "\n",
-    "df = create_dataframe_from_fasta('sequences.fasta') # decompress from 7z file"
+    "df = create_dataframe_from_fasta(os.path.join('sequences.fasta') # decompress from 7z file"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41e47f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8fa5ee9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5806131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,50 +104,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "02a9cd04",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mutants and their variants\n",
-    "species_vum = {'AZ.5','C.1.2','B.1.640'} # VUM: Variant under Monitoring\n",
+    "# references\n",
+    "# https://www.cdc.gov/coronavirus/2019-ncov/variants/variant-classifications.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fvariants%2Fvariant-info.html\n",
+    "# https://cov-lineages.org/constellations.html\n",
     "\n",
-    "def assign_species_from_pangolin(x:str): # https://www.cdc.gov/coronavirus/2019-ncov/variants/variant-classifications.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fvariants%2Fvariant-info.html\n",
-    "    if x == 'B.1.1.7' or x.startswith('Q'):\n",
+    "def assign_species_from_pangolin(x:str): \n",
+    "    if x == 'B.1.1.7' or x.startswith('Q') :\n",
     "        return 'Alpha'\n",
     "    \n",
-    "    elif x.startswith('B.1.351'):\n",
+    "    elif x.startswith('B.1.351') :\n",
     "        return 'Beta'\n",
     "    \n",
-    "    elif x.startswith('P.1'):\n",
+    "    elif x.startswith('P.1') :\n",
     "        return 'Gamma'\n",
     "    \n",
-    "    elif x == 'B.1.617.2' or x.startswith('AY'):\n",
+    "    elif x == 'B.1.617.2' or x.startswith('AY') :\n",
     "        return 'Delta'\n",
     "    \n",
-    "    elif x == \'B.1.427\' or x == \'B.1.429\':\n",
-    "        return \'Epsilon\'\n",
+    "    elif x == 'B.1.427' or x == 'B.1.429':\n",
+    "        return 'Epsilon'\n",
     "    \n",
-    "    elif x == \'B.1.525\':\n",
-    "        return \'Eta\'\n",
+    "    elif x == 'B.1.525':\n",
+    "        return 'Eta'\n",
     "    \n",
-    "    elif x == \'B.1.526\':\n",
-    "        return \'Iota\'\n",
+    "    elif x == 'B.1.526':\n",
+    "        return 'Iota'\n",
     "    \n",
-    "    elif x == \'B.1.617.1\':\n",
-    "        return \'Kappa\'\n",
+    "    elif x == 'B.1.617.1':\n",
+    "        return 'Kappa'\n",
     "    \n",
-    "    elif x.startswith('C.37'):\n",
+    "    elif x.startswith('C.37') :\n",
     "        return 'Lambda'\n",
     "    \n",
-    "    elif x == \'B.1.617.3':\n",
+    "    elif x == 'B.1.617.3':\n",
     "        return 'N/A'\n",
     "    \n",
-    "    elif x == 'B.1.1.529' or x.startswith('XBB') or x.startswith('BA') or x == 'XE':\n",
+    "    elif x.startswith('B.1.1.529') or x.startswith('XBB') or x.startswith('BA') or x == 'XE' :\n",
     "        return 'Omicron'\n",
-    "    \n", 
-    "    elif x == \'P.2\' or x == \'P.3\':\n",
-    "        return \'Zeta\'\n",
     "    \n",
-    "    elif x == \'B.1.621\' or x == \'B.1.621.1\':\n",
+    "    elif x == 'P.2' or x == 'P.3':\n",
+    "        return 'Zeta'\n",
+    "    \n",
+    "    elif x == 'B.1.621' or x == 'B.1.621.1' :\n",
     "        return 'Mu'\n",
     "    \n",
     "    else:\n",
@@ -154,22 +162,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f68a526",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs(\"Results\", exist_ok = True)\n",
-    "df_result.to_csv(os.path.join('Results', 'Pairwised_sequences.csv'), index = False)"
+    "df_result.to_csv('Pairwised_sequences.csv', index = False)"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "57076f98cea3432ee277415ac0c2ba70c0a8f34def55cae0caa141641e820b11"
-  },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -181,9 +187,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
